# uncover

./: .gitignore  LICENSE  README.md  cmake-linux-clang.sh  cmake-linux-gcc.sh  cmake-linux-generic.sh  cmake-linux-intel.sh  todolist.txt
doc/: create_documentation.sh  doc_conf.txt
res/: gtxl _mod.dtd  gtxl.dtd
src/: CMakeLists.txt  main.cpp  uncover-info.h
src/analysis/: BackwardAnalysis.cpp  BackwardAnalysis.h  BackwardResultHandler.h  InstantWriterResultHandler.cpp  InstantWriterResultHandler.h  MinPOCEnumerator.h  NoRulePreparer.cpp  NoRulePreparer.h  PreparedGTS.cpp  PreparedGTS.h  RulePreparer.h  analysis-info.h  rule_preparation_helper.cpp  rule_preparation_helper.h
src/basic_types/: CollectionCallback.h  GenericMessageException.cpp  GenericMessageException.h  IDPartition.cpp  IDPartition.h  IDPartitionEnumerator.cpp  IDPartitionEnumerator.h  InitialisationException.cpp  InitialisationException.h  InvalidInputException.cpp  InvalidInputException.h  InvalidStateException.cpp  InvalidStateException.h  Order.h  OutOfIDsException.cpp  OutOfIDsException.h  RunException.cpp  RunException.h  Scenario.cpp  Scenario.h  Streamable.h  Timer.cpp  Timer.h  VectorCallback.h  basic_types-info.h  globals.cpp  globals.h  hash_functions.h  standard_operators.h
src/graphs/: AnonHypergraph.cpp  AnonHypergraph.h  AnonRule.cpp  AnonRule.h  Edge.cpp  Edge.h  GTS.cpp  GTS.h  Hypergraph.cpp  Hypergraph.h  IsomorphismChecker.cpp  IsomorphismChecker.h  Mapping.cpp  Mapping.h  MinGraphList.cpp  MinGraphList.h  PathChecker.cpp  PathChecker.h  Rule.cpp  Rule.h  SignatureCreater.cpp  SignatureCreater.h  UQRule.cpp  UQRule.h  UQRuleInstance.cpp  UQRuleInstance.h  Vertex.cpp  Vertex.h  graphs-info.h
src/io/: GTXLReader.cpp  GTXLReader.h  GTXLReaderXerces.cpp  GTXLReaderXerces.h  GTXLWriter.cpp  GTXLWriter.h  GTXLWriterXerces.cpp  GTXLWriterXerces.h  GraphDrawer.cpp  GraphDrawer.h  LatexExporter.cpp  LatexExporter.h  XMLioException.cpp  XMLioException.h  XercesLoggingErrorHandler.cpp  XercesLoggingErrorHandler.h  io-info.h  io_helpers.h  xercesc_helpers.cpp  xercesc_helpers.h
src/logging/: DelayedLogMessage.cpp  DelayedLogMessage.h  MessageLogger.cpp  MessageLogger.h  MultiStream.cpp  MultiStream.h  MultiStreamBuffer.cpp  MultiStreamBuffer.h  logging-info.h  message_logging.cpp  message_logging.h
src/minors/: MinorOrder.cpp  MinorOrder.h  MinorPOCEnumerator.cpp  MinorPOCEnumerator.h  MinorRulePreparer.cpp  MinorRulePreparer.h  OldMinorOrder.cpp  OldMinorOrder.h  minor-info.h
src/rule_engine/: ExpEnumerator.cpp  ExpEnumerator.h  IDClosureEnumerator.cpp  IDClosureEnumerator.h  IDtoIDEnumerator.cpp  IDtoIDEnumerator.h  PartialPOCEnumerator.cpp  PartialPOCEnumerator.h  StdMatchFinder.cpp  StdMatchFinder.h  TotalPOCEnumerator.cpp  TotalPOCEnumerator.h  rule_engine-info.h
src/scenarios/: BackwardAnalysisScenario.cpp  BackwardAnalysisScenario.h  BackwardStepTest.cpp  BackwardStepTest.h  GTXLtoLatexConverter.cpp  GTXLtoLatexConverter.h  GXLtoPicConverter.cpp  GXLtoPicConverter.h  LEQCheckScenario.cpp  LEQCheckScenario.h  LeaderElectionRuleCreater.cpp  LeaderElectionRuleCreater.h  MatcherScenario.cpp  MatcherScenario.h  RulePreparerTest.cpp  RulePreparerTest.h  ScenarioLoader.cpp  ScenarioLoader.h  XMLTestScenario.cpp  XMLTestScenario.h  scenario_ids.h  scenarios-info.h
src/subgraphs/: SubgraphOrder.cpp  SubgraphOrder.h  SubgraphPOCEnumerator.cpp  SubgraphPOCEnumerator.h  SubgraphRulePreparer.cpp  SubgraphRulePreparer.h  subgraphs-info.h
src/test/: call_all_tests.cpp  graph_generator.cpp  graph_generator.h  id_closure_enumeration_tests.cpp  misc_tests.cpp  order_tests.cpp  partition_enumeration_tests.cpp  poc_enumeration_tests.cpp  test-info.h  uqrule_tests.cpp
testbench/: delete-old-results.sh  perform-analysis.sh  perform-batch.sh  save-old-results.sh
testbench/Bakery/: Bakery.xml  BakeryError.xml  BakeryUQ.xml  BakeryUQalt.xml  perform-this-analysis.sh
testbench/BurnsMutEx/: BurnsMutEx.xml  BurnsMutExError.xml  perform-this-analysis.sh
testbench/DiningPhilosophers/: DiningPhilosophers.xml  DiningPhilosophersError.xml  perform-this-analysis.sh
testbench/Firewall/: Firewall.xml  FirewallError.xml  perform-this-analysis.sh
testbench/LeaderElection/: LeaderElection.xml  LeaderElectionError.xml  perform-this-analysis.sh
testbench/MultiUserSystem/: MultiUserSystem.xml  MultiUserSystemError.xml  MultiUserSystemWithSwap.xml  perform-this-analysis.sh
testbench/PublicPrivateServer/: PublicPrivateServer.xml  PublicPrivateServerError.xml  perform-this-analysis.sh
testbench/TerminationDetection/: TerminationDetectionCorrect.xml  TerminationDetectionError.xml  TerminationDetectionFaulty.xml  perform-this-analysis.sh
